tests/baselines/reference/classExtendsNull2.errors.txt
classExtendsNull2.ts(7,5): error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'.


==== classExtendsNull2.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/55499
    
    interface Base {}
    
    class C extends null {
      constructor() {
        super();
        ~~~~~~~
!!! error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'.
      }
    }
    interface C extends Base {}
    